--- a/app/views/pics/index.html.haml
+++ b/app/views/pics/index.html.haml
@@ -2,5 +2,5 @@
   #pics.transitions-enabled
     - @pics.each do |pic|
       .box.panel.panel-default
-        = link_to (image_tag pic.image.url(:medium)), pic
+        = link_to (image_tag pic.image.url()), pic
         %h2= link_to pic.title, pic
