--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,8 +18,9 @@
           %li= link_to "Settings", edit_user_registration_path
           %li= link_to "Sign Out", destroy_user_session_path, method: :delete
       - else
-        %li= link_to "Join!", new_user_registration_path
-        %li= link_to "Log In", new_user_session_path
+        %ul.nav.navbar-nav.navbar-left
+          %li= link_to "Join!", new_user_registration_path
+          %li= link_to "Log In", new_user_session_path
 
   .container
     -flash.each do |name, msg|
