--- a/app/views/pics/index.html.haml
+++ b/app/views/pics/index.html.haml
@@ -1,6 +1,5 @@
-.col-md-6.col-md-offset-3
-  #pics.transitions-enabled
-    - @pics.each do |pic|
-      .box.panel.panel-default
-        = link_to (image_tag pic.image.url()), pic
-        %h2= link_to pic.title, pic
+#pics.transitions-enabled
+  - @pics.each do |pic|
+    .col-md-4.box.panel.panel-default
+      = link_to (image_tag pic.image.url()), pic
+      %h2= link_to pic.title, pic
